create header app

--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script type="module" src="./app.js"></script>
+    <script type="module" src="./app.js" defer></script>
     <link rel="stylesheet" href="./css/style.css" />
     <title>WeatherApp</title>
   </head>
   <body>
-    
+    <div id="search">
+      <img src="./img/location.png" alt="locationIcon" id="location" />
+      <input type="text" placeholder="Enter City Name" name="" id="" />
+      <button>Search</button>
+    </div>
   </body>
 </html>
