--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
       <input type="text" placeholder="Enter City Name" name="" id="" />
       <button>Search</button>
     </div>
+    <div id="weather"></div>
   </body>
 </html>
