--- a/index.html
+++ b/index.html
@@ -15,5 +15,11 @@
     </div>
     <div id="weather"></div>
     <div id="forecast"></div>
+    <div id="modal">
+      <div>
+        <div><span id="modal-btn">X</span></div>
+        <div><p></p></div>
+      </div>
+    </div>
   </body>
 </html>
