--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
       <input type="text" placeholder="Enter City Name" name="" id="" />
       <button>Search</button>
     </div>
-    <div id="weather"></div>
+    <div id="weather">
+      <span id="loader"></span>
+    </div>
     <div id="forecast"></div>
     <div id="modal">
       <div>
